@@ -98,6 +98,17 @@
 
 <div id="docs" class="tabcontent">
 
+    <table>
+        {% for dr in docrels %}
+	  <tr class="ListItem">
+              <td>{{ dr['date'] }}</td>
+	      <td>
+		<a href="/docs/{{ dr['_id'] }}">{{ dr['title'] }}</a>
+              </td>
+	     </tr>
+        {% endfor %}
+    </table>
+
     {% if who['kind'] in ['OPR', 'USR', 'MNR'] %}
     <form action="/docrels/new/" method="post">
         <select name="doc_id">
@@ -110,12 +121,7 @@
         <button>Agregar</button>
     </form>
     {% endif %}
-    
-    <ul class="List">
-        {% for dr in docrels %}
-        <li class="ListItem"><a href="/docs/{{ dr['_id'] }}">{{ dr['title'] }}</a></li>
-        {% endfor %}
-    </ul>
+ 
 </div>
 
 <script src="{{ url_for('static', filename='tabs.js') }}"></script>
